--- a/docs/dokumentacija.ipynb
+++ b/docs/dokumentacija.ipynb
@@ -571,9 +571,10 @@
     "                    ┌──────────────────┐\n",
     "            ┌───────│ S1_EXPLANATION   │◄──────┐\n",
     "            │       │   📖 Razlaga     │       │\n",
-    "            │       └────────┬─────────┘       │\n",
-    "            │                │ pozitiven/      │ negativen\n",
-    "            │                │ nevtralen       │\n",
+    "            │       └────────┬─────────┘       │ negativen\n",
+    "            │                │                 │ (pojasnila)\n",
+    "            │                │ pozitiven ali   │\n",
+    "            │                │ 2+ korakov      │\n",
     "            │                ▼                 │\n",
     "            │       ┌──────────────────┐       │\n",
     "            │   ┌──►│   S2_EXERCISE    │───────┘\n",
@@ -581,11 +582,12 @@
     "            │   │   └────────┬─────────┘\n",
     "            │   │            │\n",
     "            │   │  pozitiven │ negativen\n",
+    "            │   │  nevtralen │\n",
     "            │   │            ▼\n",
     "            │   │   ┌──────────────────┐\n",
-    "            │   └───│    S3_BREAK      │\n",
-    "            │       │    ☕ Odmor      │\n",
-    "            │       └────────┬─────────┘\n",
+    "            │   └───│    S3_BREAK      │◄──┐\n",
+    "            │       │    ☕ Odmor      │   │ negativen\n",
+    "            │       └────────┬─────────┘───┘\n",
     "            │                │ feedback / \n",
     "            │                │ success_steps >= 5\n",
     "            │                ▼\n",
@@ -594,6 +596,20 @@
     "                    │   ✅ Zaključek   │\n",
     "                    └──────────────────┘\n",
     "```\n",
+    "\n",
+    "**Legenda prehodov:**\n",
+    "| Iz stanja | Signal | V stanje |\n",
+    "|-----------|--------|----------|\n",
+    "| S0_GREETING | vedno | S1_EXPLANATION |\n",
+    "| S1_EXPLANATION | pozitiven | S2_EXERCISE |\n",
+    "| S1_EXPLANATION | negativen | S1_EXPLANATION (pojasnila) |\n",
+    "| S1_EXPLANATION | nevtralen/feedback (2+ korakov) | S2_EXERCISE |\n",
+    "| S2_EXERCISE | negativen | S3_BREAK |\n",
+    "| S2_EXERCISE | success_steps >= 5 | S4_FEEDBACK |\n",
+    "| S3_BREAK | pozitiven ali nevtralen | S2_EXERCISE |\n",
+    "| S3_BREAK | negativen | S3_BREAK |\n",
+    "| S3_BREAK | feedback | S4_FEEDBACK |\n",
+    "| S4_FEEDBACK | vedno | S4_FEEDBACK (končno) |\n",
     "\n",
     "#### Arhitektura aplikacije\n",
     "\n",
