Update to readme and documentation

--- a/docs/dokumentacija.ipynb
+++ b/docs/dokumentacija.ipynb
@@ -226,8 +226,6 @@
     "- **Subjektivna ocena uporabnika (1–5)**:\n",
     "  - `rating_supportive`, `rating_understandable`, `rating_non_intrusive` (shrani se po zaključku seje).\n",
     "\n",
-    "Opomba: metrike tipa **SR/CPR/PR/MR** so klasične evalvacijske formule, vendar v tej implementaciji niso neposredno izračunane, ker prototip ne označuje \"pravilnih/napačnih\" odgovorov, ampak analizira potek stanj, eskalacije in ujemanje s scenariji.\n",
-    "\n",
     "<p style=\"margin-bottom:2cm;\"></p>\n",
     "<img src=\"https://raw.githubusercontent.com/andrejkk/ORvTK_SlidesImgs/master/footer_full.jpg\">"
    ]
@@ -385,32 +383,106 @@
    "source": [
     "### 2.3. Merjenje uspešnosti rešitve <a class=\"anchor\" id=\"merjenje-uspesnosti-resitve\"></a>\n",
     "\n",
-    "Za evalvacijo sistema uporabljamo več metrik (izračun v `core/fsm.py` in `evaluation/functions.py`):\n",
+    "Za evalvacijo sistema uporabljamo več metrik:\n",
     "\n",
-    "#### 1. Razmerje pozitivnih interakcij\n",
+    "#### 1. Razmerje pozitivnih interakcij (Positive Ratio)\n",
     "\n",
-    "**Positive Ratio** = |pozitivne interakcije| / |pozitivne + negativne|\n",
+    "Razmerje pozitivnih interakcij je osrednja metrika za ocenjevanje kakovosti komunikacije med uporabnikom in robotom. Ta metrika meri delež pozitivnih odzivov uporabnika glede na vse interakcije, ki vključujejo pozitivne ali negativne signale. Visoka vrednost kaže na uspešno prilagajanje robota uporabnikovi potrebi in pozitivno izkušnjo, medtem ko nizka vrednost lahko kaže na težave pri komunikaciji ali preobremenjenost uporabnika.\n",
     "\n",
-    "Opomba: v trenutni implementaciji se pozitivno/negativno štetje v UI/FSM izvaja na podlagi množic intentov v `core/fsm.py` (npr. \"Positive affect\" je pozitivno; \"User frustrated / overloaded\" in \"Disengagement risk\" sta negativna).\n",
+    "**Matematična definicija:**\n",
     "\n",
-    "#### 2. Linearnost prehodov\n",
+    "$$\\text{Positive Ratio} = \\frac{|\\text{pozitivne interakcije}|}{|\\text{pozitivne interakcije}| + |\\text{negativne interakcije}|}$$\n",
     "\n",
-    "**Linearity** = forward_moves / (forward_moves + backward_moves)\n",
+    "kjer:\n",
+    "- $|\\text{pozitivne interakcije}|$ = število interakcij z pozitivnimi intenti\n",
+    "- $|\\text{negativne interakcije}|$ = število interakcij z negativnimi intenti\n",
     "\n",
-    "Meri, kako direkten je bil prehod skozi stanja glede na pričakovani vrstni red `[S0, S1, S2, S3, S4]`.\n",
+    "**Razpon vrednosti:** $[0, 1]$ (ali $[0\\%, 100\\%]$)\n",
+    "\n",
+    "**Kategorizacija intentov:**\n",
+    "\n",
+    "V trenutni implementaciji se pozitivno/negativno štetje izvaja na podlagi množic intentov:\n",
+    "\n",
+    "- **Pozitivni intenti**, ki kažejo zadovoljstvo, sodelovanje in pozitivno razpoloženje uporabnika\n",
+    "  \n",
+    "- **Negativni intenti**, ki kažejo težave, frustracijo, preobremenjenost ali zmedenost uporabnika\n",
+    "\n",
+    "**Interpretacija rezultatov:**\n",
+    "- $\\text{Positive Ratio} \\geq 0.7$: Odlična komunikacija, uporabnik je zadovoljen in sodelujoč\n",
+    "- $0.4 \\leq \\text{Positive Ratio} < 0.7$: Sprejemljiva komunikacija, vendar možnost za izboljšave\n",
+    "- $\\text{Positive Ratio} < 0.4$: Problematična komunikacija, uporabnik kaže znake frustracije ali nezadovoljstva\n",
+    "\n",
+    "#### 2. Linearnost prehodov (Linearity)\n",
+    "\n",
+    "Linearnost prehodov meri, kako direkten in strukturiran je bil potek dialoga skozi pričakovana stanja končnega avtomata. Ta metrika ocenjuje, ali je robot uspešno vodil uporabnika skozi zaporedne korake brez nepotrebnih povratkov v prejšnja stanja, kar kaže na učinkovito vodenje seje.\n",
+    "\n",
+    "**Matematična definicija:**\n",
+    "\n",
+    "$$\\text{Linearity} = \\frac{N_{\\text{forward}}}{N_{\\text{forward}} + N_{\\text{backward}}}$$\n",
+    "\n",
+    "kjer:\n",
+    "- $N_{\\text{forward}}$ = število prehodov v naprej (v stanje z višjim indeksom)\n",
+    "- $N_{\\text{backward}}$ = število prehodov nazaj (v stanje z nižjim indeksom)\n",
+    "\n",
+    "**Pričakovani vrstni red stanj:**\n",
+    "\n",
+    "$$\\mathcal{S} = [S_0, S_1, S_2, S_3, S_4] = [\\text{S0\\_GREETING}, \\text{S1\\_EXPLANATION}, \\text{S2\\_EXERCISE}, \\text{S3\\_BREAK}, \\text{S4\\_FEEDBACK}]$$\n",
+    "\n",
+    "**Definicija prehodov:**\n",
+    "- **Forward move:** Prehod iz stanja $S_i$ v stanje $S_j$, kjer $j > i$ (napredovanje v pričakovanem vrstnem redu)\n",
+    "- **Backward move:** Prehod iz stanja $S_i$ v stanje $S_j$, kjer $j < i$ (povratek v prejšnje stanje)\n",
+    "\n",
+    "**Razpon vrednosti:** $[0, 1]$ (ali $[0\\%, 100\\%]$)\n",
+    "\n",
+    "**Interpretacija rezultatov:**\n",
+    "- $\\text{Linearity} = 1.0$: Popolnoma linearen prehod, brez povratkov (idealno)\n",
+    "- $0.7 \\leq \\text{Linearity} < 1.0$: Dobra linearnost, minimalni povratki\n",
+    "- $0.5 \\leq \\text{Linearity} < 0.7$: Zmerna linearnost, nekaj povratkov (npr. zaradi potrebe po dodatnih pojasnilih)\n",
+    "- $\\text{Linearity} < 0.5$: Nizka linearnost, pogosti povratki (kaže na težave pri vodenju seje)\n",
+    "\n",
+    "**Praktični pomen:** Visoka linearnost pomeni, da je robot uspešno vodil uporabnika skozi strukturirano pot brez nepotrebnih ponovitev, medtem ko nizka linearnost lahko kaže na težave pri razumevanju navodil ali potrebo po dodatnih prilagoditvah.\n",
     "\n",
     "#### 3. Učinkovitost (Efficiency)\n",
     "\n",
-    "**Efficiency** = min(1.0, min_steps / actual_steps)\n",
+    "Učinkovitost meri, kako hitro je seja dosegla zaključek glede na minimalno potrebno število korakov. Ta metrika ocenjuje časovno učinkovitost dialoga in kaže, ali je robot uspešno vodil uporabnika do cilja brez nepotrebnih zamud ali ciklov.\n",
     "\n",
-    "kjer je `min_steps = 5` (minimalno potrebnih korakov za zaključek, če je zaključek dosežen).\n",
+    "**Matematična definicija:**\n",
     "\n",
-    "#### 4. Klasifikacijska zanesljivost\n",
+    "$$\\text{Efficiency} = \\begin{cases}\n",
+    "\\min\\left(1.0, \\frac{N_{\\text{min}}}{N_{\\text{actual}}}\\right) & \\text{če je zaključek dosežen} \\\\\n",
+    "0 & \\text{če zaključek ni dosežen}\n",
+    "\\end{cases}$$\n",
     "\n",
-    "Ujemanje seje z referenčnim scenarijem (0-100%):\n",
-    "- ≥ 70%: Visoka zanesljivost\n",
-    "- 50-70%: Srednja zanesljivost  \n",
-    "- < 50%: Nizka zanesljivost\n",
+    "kjer:\n",
+    "- $N_{\\text{min}} = 5$ = minimalno potrebno število korakov za uspešen zaključek\n",
+    "- $N_{\\text{actual}}$ = dejansko število korakov, potrebnih za zaključek seje\n",
+    "\n",
+    "**Razpon vrednosti:** $[0, 1]$ (ali $[0\\%, 100\\%]$)\n",
+    "\n",
+    "**Posebni primeri:**\n",
+    "- Če $N_{\\text{actual}} < N_{\\text{min}}$: $\\text{Efficiency} = 1.0$ (idealno, seja je bila hitrejša od pričakovane)\n",
+    "- Če $N_{\\text{actual}} = N_{\\text{min}}$: $\\text{Efficiency} = 1.0$ (optimalno)\n",
+    "- Če $N_{\\text{actual}} > N_{\\text{min}}$: $\\text{Efficiency} = \\frac{N_{\\text{min}}}{N_{\\text{actual}}} < 1.0$ (seja je trajala dlje)\n",
+    "- Če zaključek ni dosežen: $\\text{Efficiency} = 0$ (seja ni bila uspešna)\n",
+    "\n",
+    "**Interpretacija rezultatov:**\n",
+    "- $\\text{Efficiency} = 1.0$: Optimalna učinkovitost, seja je dosegla zaključek v minimalnem ali krajšem času\n",
+    "- $0.7 \\leq \\text{Efficiency} < 1.0$: Dobra učinkovitost, seja je trajala nekoliko dlje, vendar še vedno sprejemljivo\n",
+    "- $0.5 \\leq \\text{Efficiency} < 0.7$: Zmerna učinkovitost, seja je trajala znatno dlje (npr. zaradi dodatnih pojasnil ali odmora)\n",
+    "- $\\text{Efficiency} < 0.5$: Nizka učinkovitost, seja je trajala zelo dolgo ali ni dosegla zaključka\n",
+    "\n",
+    "**Praktični pomen:** Visoka učinkovitost kaže, da je robot uspešno vodil uporabnika do cilja brez nepotrebnih zamud, medtem ko nizka učinkovitost lahko kaže na težave pri komunikaciji, potrebo po več ponovitvah ali preobremenjenost uporabnika.\n",
+    "\n",
+    "#### 4. Klasifikacijska zanesljivost (Scenario Match)\n",
+    "\n",
+    "Klasifikacijska zanesljivost meri ujemanje seje z enim od referenčnih scenarijev, ki predstavljajo tipične vzorce vedenja uporabnikov. Ta metrika omogoča kategorizacijo sej in primerjavo med različnimi interakcijami.\n",
+    "\n",
+    "**Razpon vrednosti:** $[0\\%, 100\\%]$\n",
+    "\n",
+    "**Kategorizacija zanesljivosti:**\n",
+    "- $\\geq 70\\%$: **Visoka zanesljivost** – seja se zelo dobro ujema s scenarijem\n",
+    "- $50\\% - 70\\%$: **Srednja zanesljivost** – seja delno ustreza scenariju\n",
+    "- $< 50\\%$: **Nizka zanesljivost** – seja se slabo ujema s scenarijem ali ne ustreza nobenemu tipičnemu profilu\n",
     "\n",
     "#### Referenčni scenariji (implementirani)\n",
     "\n",
@@ -422,7 +494,27 @@
     "| **Pod stresom** | Znaki stresa in preobremenjenosti | positive_ratio ≤ 0.4, min_escalations ≥ 2, typical_intents (če se ujemajo) |\n",
     "| **Kritična seja** | Veliko eskalacij | positive_ratio ≤ 0.3, min_escalations ≥ 3 |\n",
     "\n",
-    "Opomba: scenariji vsebujejo tudi polja (npr. `expected_triggers`), ki so v dokumentaciji uporabna za razlago, vendar se v izračunu ujemanja trenutno ne uporabljajo.\n",
+    "#### 5. Subjektivna ocena uporabnika po koncu seje\n",
+    "\n",
+    "Subjektivna ocena uporabnika predstavlja kvalitativno merilo izkušnje uporabnika z interakcijo. Ta metrika zajame tri ključne vidike robotske komunikacije, ki so pomembni za uspešno interakcijo v kontekstu kognitivnega treninga.\n",
+    "\n",
+    "**Ocene (vsaka na lestvici 1–5):**\n",
+    "\n",
+    "1.   Podpornost robota\n",
+    "   - Meri, kako podporen in spodbudilen je bil robot med interakcijo\n",
+    "   - 1 = popolnoma nepodporen, 5 = zelo podporen\n",
+    "\n",
+    "2.   Razumljivost komunikacije\n",
+    "   - Meri, kako razumljiva in jasna je bila robotska komunikacija\n",
+    "   - 1 = popolnoma nerazumljivo, 5 = zelo razumljivo\n",
+    "\n",
+    "3.  Nevsiljivost\n",
+    "   - Meri, kako nevsiljiv in prijeten je bil robot (ne preveč vsiljiv ali moteč)\n",
+    "   - 1 = zelo vsiljiv, 5 = popolnoma nevsiljiv\n",
+    "\n",
+    "**Praktični pomen:** Te ocene omogočajo direktno vrednotenje uporabnikove izkušnje in so pomembne za oceno celotne kakovosti sistema. Visoke ocene kažejo na uspešno prilagajanje robota uporabnikovi potrebi, medtem ko nizke ocene lahko kažejo na potrebo po izboljšavah v komunikaciji ali pristopu.\n",
+    "\n",
+    "**Zbiranje podatkov:** Ocene se zbirajo po zaključku seje preko uporabniškega vmesnika in se shranijo v bazo podatkov skupaj z ostalimi metričnimi podatki seje. Za vsako posamezno sejo lahko vidimo kako je pogovor z robotom bil evalviran preko zgornjih metrik. \n",
     "\n",
     "\n",
     "</br>\n",
@@ -504,7 +596,7 @@
     "| **Robot Speech Act** | Tip govornega akta | \"Expressive + Commissive\" |\n",
     "| **RobotText** | Robotov odziv | \"You look stressed — shall I slow down?\" |\n",
     "\n",
-    "Opomba: v tej verziji prototipa je seznam pravil statično definiran v Python datoteki (ne bere se dinamično iz Excel datoteke).\n",
+    "Seznam pravil je statično definiran v Python datoteki kopiran iz priložene Excell datoteke.\n",
     "\n",
     "#### Primeri pravil:\n",
     "\n",
@@ -564,13 +656,13 @@
     "```\n",
     "                    ┌──────────────┐\n",
     "                    │ S0_GREETING  │\n",
-    "                    │   👋 Pozdrav │\n",
+    "                    │   Pozdrav    │\n",
     "                    └──────┬───────┘\n",
     "                           │ vedno\n",
     "                           ▼\n",
     "                    ┌──────────────────┐\n",
     "            ┌───────│ S1_EXPLANATION   │◄──────┐\n",
-    "            │       │   📖 Razlaga     │       │\n",
+    "            │       │   Razlaga        │       │\n",
     "            │       └────────┬─────────┘       │ negativen\n",
     "            │                │                 │ (pojasnila)\n",
     "            │                │ pozitiven ali   │\n",
@@ -578,7 +670,7 @@
     "            │                ▼                 │\n",
     "            │       ┌──────────────────┐       │\n",
     "            │   ┌──►│   S2_EXERCISE    │───────┘\n",
-    "            │   │   │    🎯 Vaja       │\n",
+    "            │   │   │    Vaja          │\n",
     "            │   │   └────────┬─────────┘\n",
     "            │   │            │\n",
     "            │   │  pozitiven │ negativen\n",
@@ -586,14 +678,14 @@
     "            │   │            ▼\n",
     "            │   │   ┌──────────────────┐\n",
     "            │   └───│    S3_BREAK      │◄──┐\n",
-    "            │       │    ☕ Odmor      │   │ negativen\n",
+    "            │       │    Odmor         │   │ negativen\n",
     "            │       └────────┬─────────┘───┘\n",
     "            │                │ feedback / \n",
     "            │                │ success_steps >= 5\n",
     "            │                ▼\n",
     "            │       ┌──────────────────┐\n",
     "            └──────►│   S4_FEEDBACK    │\n",
-    "                    │   ✅ Zaključek   │\n",
+    "                    │   Zaključek      │\n",
     "                    └──────────────────┘\n",
     "```\n",
     "\n",
